# rpi4-youtube-live-streaming

./: LICENSE  README.md  install.sh
systemd/: yt-live.service
yt-live/: pyproject.toml
yt-live/yt_live/: __main__.py  youtube_live.py
yt-live/yt_live/api/: api.py
yt-live/yt_live/devices/: capture_board.py  usb_mic.py
yt-live/yt_live/streamer/: streamer.py
yt-live/yt_live/streamer/devices/: base.py
